Added export feature

--- a/ExpenseTracker/wwwroot/index.html
+++ b/ExpenseTracker/wwwroot/index.html
@@ -28,6 +28,17 @@
     </div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
+    <script>
+        function downloadFile(fileUrl, fileName) {
+            const a = document.createElement('a');
+            a.href = fileUrl;
+            a.download = fileName;
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+        }
+    </script>
+
 
 </body>
 
